<resources>
    <string name="app_name">BiketheRide</string>
    <string name="etEmail">email</string>
    <string name="etPassword">password</string>
    <string name="btIniciarSesion">Iniciar sesión</string>
    <string name="btRegistrar">Registrarse</string>
    <string name="btVolver">Volver</string>
    <string name="etNombre">nombre</string>
    <string name="prefs_file">com.example.biketheride.PREFERENCE_FILE_KEY</string>
    <string name="bicisDisponibles">Bicicletas disponibles</string>
    <string name="mapa">Mapa</string>
    <string name="misReservas">Mis reservas</string>
    <string name="misBicis">Mis bicicletas</string>
    <string name="logout">Logout</string>
    <string name="mensajes">Mensajes</string>
    <string name="registrarBici">Registrar bicicleta</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="my_bicis_vacio_fragment">No tienes bicicletas para alquilar</string>
    <string name="descrip_registrar_bici">Descripción</string>
    <string name="bt_registrar_bici">Registrar</string>
    <string name="tvCargandoFotoBici">Cargando...</string>
    <string name="tvCargaCompletaFotoBici">Completado</string>
    <string name="btActualizar">Actualizar</string>
    <string name="passEdit">******</string>
    <string name="tvReservar">Reservar</string>
    <string name="SelecFecha">Seleccionar fecha</string>
    <string name="reservas_vacio_fragment">No tienes ninguna reserva</string>
    <string name="eliminar_bicicleta">Eliminar bicicleta</string>
    <string name="eliminar_reserva">Eliminar reserva</string>
    <string name="bicis_vacio_fragment">No hay bicicletas disponibles para la fecha seleccionada</string>
    <string name="date_msg">00/00/0000 00:00</string>
    <string name="contactar">Contactar</string>



</resources>