<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo_login"
    tools:context=".Registrar">

    <ImageView
        android:id="@+id/imageViewLogo"
        android:layout_width="wrap_content"
        android:layout_height="289dp"
        android:layout_marginTop="64dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo_biketheride" />

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:layout_marginTop="36dp"
        android:alpha="0.5"
        android:background="@drawable/rounded_corners_ed"
        android:clickable="true"
        android:ems="10"
        android:fontFamily="@font/roboto"
        android:hint="@string/etEmail"
        android:inputType="textPersonName"
        android:minHeight="45dp"
        android:paddingLeft="15dp"
        android:textColor="#000000"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewLogo" />

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="300dp"
        android:layout_height="45dp"
        android:layout_marginTop="20dp"
        android:alpha="0.5"
        android:background="@drawable/rounded_corners_ed"
        android:ems="10"
        android:fontFamily="@font/roboto"
        android:hint="contraseña"
        android:inputType="textPassword"
        android:minHeight="45dp"
        android:paddingLeft="15dp"
        android:textColor="#000000"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etEmail"
        tools:ignore="TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/etNombre"
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:layout_marginTop="20dp"
        android:alpha="0.5"
        android:background="@drawable/rounded_corners_ed"
        android:clickable="true"
        android:ems="10"
        android:fontFamily="@font/roboto"
        android:hint="@string/etNombre"
        android:inputType="textPersonName"
        android:minHeight="45dp"
        android:paddingLeft="15dp"
        android:textColor="#000000"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etPassword" />

    <Button
        android:id="@+id/btRegistro"
        android:layout_width="230dp"
        android:layout_height="38dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/rounded_corners_bt"
        android:fontFamily="@font/krona_one"
        android:text="@string/btRegistrar"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etNombre" />

    <Button
        android:id="@+id/btVolver"
        android:layout_width="230dp"
        android:layout_height="38dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/rounded_corners_bt"
        android:fontFamily="@font/krona_one"
        android:onClick="volver"
        android:text="@string/btVolver"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btRegistro" />
</androidx.constraintlayout.widget.ConstraintLayout>