<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".RegistrarBiciFragment">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="120dp"
        android:fontFamily="@font/roboto"
        android:text="@string/descrip_registrar_bici"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etDescripBici"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="108dp"
        android:ems="10"
        android:fontFamily="@font/roboto"
        android:inputType="textPersonName"
        android:textSize="14sp"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/ibtCargarFoto"
        android:layout_width="280dp"
        android:layout_height="280dp"
        android:layout_marginStart="64dp"
        android:layout_marginTop="80dp"
        android:background="@color/white"
        android:backgroundTint="#FFFFFF"
        android:scaleType="fitCenter"
        android:src="@drawable/ic_insert_photo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <Button
        android:id="@+id/btRegistrarBici"
        android:layout_width="240dp"
        android:layout_height="38dp"

        android:layout_marginTop="48dp"
        android:background="@drawable/rounded_corners_bt_disable"
        android:enabled="false"
        android:fontFamily="@font/roboto"
        android:text="@string/bt_registrar_bici"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/progressBarCargaFoto" />

    <ProgressBar
        android:id="@+id/progressBarCargaFoto"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="240dp"
        android:layout_height="20dp"
        android:layout_marginTop="32dp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ibtCargarFoto" />

    <TextView
        android:id="@+id/tvCargandoFotoBici"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto"
        android:text="@string/tvCargandoFotoBici"
        android:textSize="12sp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/progressBarCargaFoto" />

</androidx.constraintlayout.widget.ConstraintLayout>